--- a/src/app/loans/loans.component.html
+++ b/src/app/loans/loans.component.html
@@ -2,7 +2,7 @@
     <h1>Current Loans</h1>
 
     <div class="loan" #loanA>
-        <h2 class="loan_title"></h2>
+        <h2 class="loan_title"></h2>       
         <div class="loan_details">
             <p class="loan_content"></p>
             <button class="loan_button" 
@@ -11,10 +11,11 @@
                     (click)="investToLoanA()">INVEST
             </button>
         </div>
+        <p class="loan_message hidden">Invested</p>
     </div>
 
     <div class="loan" #loanB>
-        <h2 class="loan_title"></h2>
+        <h2 class="loan_title"></h2>       
         <div class="loan_details">
             <p class="loan_content"></p>
             <button class="loan_button" 
@@ -23,6 +24,7 @@
                     (click)="investToLoanB()">INVEST
             </button>
         </div>
+        <p class="loan_message hidden">Invested</p>
     </div>
 
     <div class="loan" #loanC>
@@ -34,7 +36,7 @@
                     data-bs-target="#staticBackdrop"
                     (click)="investToLoanC()">INVEST
             </button>
-        </div>       
+        </div>      
     </div>  
     <div style="text-align: center;">Total amount available for investments: {{userAmountFunds}}</div>
 </div>
@@ -60,6 +62,7 @@
                 <p class="loan_invest-title"></p>
                 <p class="loan_invest-available"></p>
                 <p class="loan_invest-remain"></p>
+                <span>Invest amount</span>
             </div>       
             <form class="modal-body" [formGroup]="investForm">
                 <input type="text" 
