--- a/src/app/loans/loans.component.scss
+++ b/src/app/loans/loans.component.scss
@@ -13,7 +13,6 @@
 }
 
 .loan_title {
-    margin: 0;
     font-size: medium;
 }
 
@@ -43,6 +42,18 @@
     cursor: pointer;
 }
 
+.loan_message {
+    color: green;
+    position: absolute;
+    top: 40px;
+    right: 12px;
+    z-index: -1;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
 .modal-dialog {
     margin: 150px auto !important;
     width: 400px !important;
@@ -57,4 +68,12 @@
 
 .modal_input {
     border: 1px solid rgb(218, 218, 218);
+}
+
+.loan_invested-details {
+    margin-left: 12px;
+}
+
+.loan_invest-available {
+    margin-bottom: 0;
 }
