--- a/src/app/loans/loans.component.html
+++ b/src/app/loans/loans.component.html
@@ -36,6 +36,7 @@
                     data-bs-target="#staticBackdrop"
                     (click)="investToLoanC()">INVEST
             </button>
+            <p class="loan_message hidden">Invested</p>
         </div>      
     </div>  
     <div style="text-align: center;">Total amount available for investments: {{userAmountFunds}}</div>
